--- a/ES6_basic/package.json
+++ b/ES6_basic/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "lint": "eslint --fix",
+    "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
     "dev": "npx babel-node",
     "test": "jest",
